--- a/src/app/shared/components/footer-menu/footer-menu.page.html
+++ b/src/app/shared/components/footer-menu/footer-menu.page.html
@@ -12,7 +12,7 @@
           <ion-icon name="bonfire"></ion-icon>
           <ion-label>en cours</ion-label>
         </ion-tab-button>
-        <ion-tab-button tab="notifications">
+        <ion-tab-button tab="notifs">
             <ion-icon name="notifications"></ion-icon>
             <ion-label>notif</ion-label>
             <ion-badge>6</ion-badge>
