--- a/src/app/features/user/containers/notif/notif.page.html
+++ b/src/app/features/user/containers/notif/notif.page.html
@@ -16,9 +16,9 @@
                     <ion-col size="10">
                         {{ notif?.date }}&nbsp;{{ notif?.title }}                  
                     </ion-col>
-                    <ion-col size="2">
+                    <ion-col size="2" style="text-align: right">
                        <ion-button size="small" (click)="delete(notif._id)" >
-                          <ion-icon name="close" ></ion-icon>
+                          <ion-icon style="height:30px;height:30px" name="close" ></ion-icon>
                         </ion-button>
                     </ion-col>                 
                   </ion-row>
@@ -27,10 +27,18 @@
           </ion-card-header>
           <ion-card-content>
             <ion-text>
-                 x{{notif?.text}}<br />
-                <ion-button size="small" tappable [routerLink]="['/x/fm/notif',notif._id]">  
-                  Voir la demande
-                </ion-button>
+                <ion-grid>
+                    <ion-row>
+                      <ion-col size="10">
+                        {{notif?.text}}
+                      </ion-col>
+                      <ion-col size="2" style="text-align: right">
+                        <ion-button color="danger "size="small"  tappable [routerLink]="['/x/fm/oneAsk',notif.lend_id,notif?.item_id]">  
+                          <ion-icon  name="arrow-dropright-circle"></ion-icon>
+                        </ion-button>
+                      </ion-col>                 
+                    </ion-row>
+                  </ion-grid>
             </ion-text>
           </ion-card-content>
         </ion-card>
