--- a/src/app/features/user/containers/tenta-items/tenta-items.component.html
+++ b/src/app/features/user/containers/tenta-items/tenta-items.component.html
@@ -17,29 +17,35 @@
       <ion-card  *ngFor="let item of items" >
         <ion-card-header>
           <ion-card-title color="primary">
-              <ion-grid><ion-row>
-                  <ion-col>
-                      <ion-thumbnail>
-                          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-                      </ion-thumbnail>                      
-                  </ion-col>
+              <ion-grid>
+                <ion-row>
                   <ion-col  tappable [routerLink]="['/x/fm/item',item._id]">{{item?.name}}</ion-col>
-                  <ion-col>
+                  <ion-col style="text-align: right">
                   <!--  pour 2ème version <ion-toggle checked={{item?.enabled}} (ionChange)="toogleEnabled($event)" [value]="item._id" ></ion-toggle>
-                   -->   <ion-button size="small" (click)="delete(item._id)" >
+                   --> <ion-button size="small" (click)="delete(item._id)" >
                         <ion-icon name="close" ></ion-icon>
                       </ion-button>
                       <ion-button size="small" tappable [routerLink]="['/x/fm/item',item._id]">  
                           <ion-icon name="create" ></ion-icon>
                       </ion-button>
                   </ion-col>                 
-              </ion-row></ion-grid>
+                </ion-row>
+              </ion-grid>
           </ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          <ion-text>
-              {{item?.description}}
-          </ion-text>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="5">
+                    <app-camera mode="thumb" ></app-camera>                    
+                </ion-col>
+                <ion-col size="6">
+                  <ion-text>
+                      {{item?.description}}
+                  </ion-text>
+               </ion-col>
+            </ion-row>
+            </ion-grid>
         </ion-card-content>
       </ion-card>
     </ion-col>
