--- a/src/app/shared/components/footer-menu/footer-menu.page.html
+++ b/src/app/shared/components/footer-menu/footer-menu.page.html
@@ -8,7 +8,7 @@
           <ion-icon name="search"></ion-icon>
           <ion-label>look</ion-label>
         </ion-tab-button>
-        <ion-tab-button tab="enCours">
+        <ion-tab-button tab="inProgress">
           <ion-icon name="bonfire"></ion-icon>
           <ion-label>en cours</ion-label>
         </ion-tab-button>
